GMS-118 EOD commit